# service-starter

./: AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_bug.yml  agent_task.yml
.github/workflows/: ci.yml
docs/: agent-runbook.md
